--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vue-cli-service serve",
+		"buildTest": "vue-cli-service build --mode test",
 		"build": "vue-cli-service build"
 	},
 	"dependencies": {
@@ -11,6 +12,8 @@
 		"clipboard": "^2.0.6",
 		"less": "^3.12.2",
 		"less-loader": "^7.0.0",
+		"lodash-webpack-plugin": "^0.11.5",
+		"uglifyjs-webpack-plugin": "^2.2.0",
 		"vant": "^2.10.3",
 		"vue": "^2.6.11",
 		"vue-router": "^3.2.0",
