--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NODE_ENV = "production"
 VUE_APP_NODE_TYPE = 1
 # 橘子管理系统/开发环境
-VUE_APP_BASE_API = 'http://wycc168.com/prod-api'
+VUE_APP_BASE_API = 'https://wycc168.com/prod-api'
