--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"axios": "^0.20.0",
 		"clipboard": "^2.0.6",
+		"cordova": "^10.0.0",
 		"less": "^3.12.2",
 		"less-loader": "^7.0.0",
 		"lodash-webpack-plugin": "^0.11.5",
